--- a/index.html
+++ b/index.html
@@ -666,6 +666,102 @@
                 </article>
             </section>
         <!--Container 08-->
+        <!--Container 09-->
+            <section class="container-xxl">
+                <article style="background: var(--bs-verde-claro);">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <!--Texto-->
+                            <div class="w-50">
+                                <div style="max-height: 400px; overflow-y: auto; display: flex; justify-content: center;">
+                                    <div class="w-100 d-flex">
+                                        <div id="carouselExample4" class="carousel slide">
+                                            <div class="carousel-inner d-flex justify-content-center">
+                                              <div class="carousel-item w-75 active">
+                                                    <span class="w-100">
+                                                        <!--Introdução-->
+                                                            <span style="gap: 0.5rem;" class="d-flex align-items-end">
+                                                                    <img style="width: 15% !important;" src="./img/icons/icon05.webp" alt="Icon parte01">
+                                                                    <span style="height: 6vh !important; display: flex; align-items: center; width: 35% !important;">
+                                                                        <h4 style="background: url(./img/icons/Setaazul.webp); background-size: cover; width: 100% !important; padding-left: 1rem !important; color: var(--bs-white); font-family: PlayfairDisplay-Regular !important; font-size: 2rem;">Parte 8</h4>
+                                                                    </span>
+                                                            </span>
+                                                        <!--Introdução-->
+                                                        <br>
+                                                        <!--Titulo-->
+                                                            <div style="color: var(--bs-azul-intermediario);">
+                                                                    <h4>Sugestões e dicas: manejando a resiliência</h4>
+                                                            </div>
+                                                        <!--Titulo-->
+                                                        <br>
+                                                        <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
+                                                                <p>Desenvolver as capacidades e comportamentos de resiliência e de adaptabilidade requer prática! 
+                                                                    Há algumas dicas para lidar com situações que nos obrigam a ter resiliência e adaptabilidade:
+                                                                </p>
+                                                                    <br>
+                                                                <p>1. Analise o problema, tentando compreendê-lo como uma oportunidade;</p>
+                                                                    <br>
+                                                                <p>2. Divida o problema em partes;</p>
+                                                                    <br>
+                                                                <p>3.  Mantenha uma comunicação aberta, isto é, fale e também escute ;</p>
+                                                                    <br>
+                                                                <p>4. Procure desenvolver a autogestão emocional;</p>
+                                                                    <br>
+                                                                <p>5. Inspire-se por meio de exemplos em soluções criativas;</p>
+                                                                    <br>
+                                                                <p>6. Aprenda com feedbacks;</p>
+                                                                    <br>
+                                                                <p>7. Procure desenvolver as suas capacidades de flexibilidade, isto é: de se adaptar às mudanças, de lidar com o contraditório e abraçar novas ideias;</p>
+                                                                    <br>
+                                                                <p>8. Trabalhe em equipe;</p>
+                                                                    <br>
+                                                                <p>9. Celebre pequenas vitórias;</p>
+                                                                    <br>
+                                                                <p>10. Cuide da saúde mental e física.</p>
+                                                                    <br>
+                                                                <p>Clique em cada ícone e saiba mais sobre cada uma das dicas</p>
+                                                                    <br>
+                                                        </span>
+                                                    </span>
+                                              </div>
+                                              <div class="carousel-item w-75">
+                                                <span class="w-100 ">
+                                                    <span style="gap: .5rem;" class="w-25 d-flex align-items-center">
+                                                        <img class="w-100" src="./img/icons/REA_p7_1.png" alt="Icon01">
+                                                        <img class="w-100" src="./img/icons/REA_p7_2.png" alt="Icon02">
+                                                        <img class="w-100" src="./img/icons/REA_p7_3.png" alt="Icon03">
+                                                        <img class="w-100" src="./img/icons/REA_p7_4.png" alt="Icon04">
+                                                    </span>
+                                                        <br>
+                                                    <span style="gap: .5rem;" class="w-25 d-flex align-items-center"> 
+                                                        <img class="w-100" src="./img/icons/REA_p7_5.png" alt="Icon05">  
+                                                        <br>     
+                                                        <img class="w-100" src="./img/icons/REA_p7_6.png" alt="Icon06">
+                                                    </span>
+                                                </span>
+                                              </div>
+                                            </div>
+                                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample4" data-bs-slide="prev">
+                                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                              <span class="visually-hidden">Previous</span>
+                                            </button>
+                                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample4" data-bs-slide="next">
+                                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                              <span class="visually-hidden">Next</span>
+                                            </button>
+                                          </div>
+                                    </div>
+                                </div>
+                            </div>
+                        <!--Texto-->
+                        <!--Img-->
+                            <span class="w-50">
+                                <img class="w-100" src="./img/Oitavaimg.webp" alt="Segunda Img">
+                            </span>
+                        <!--Img-->
+                    </div>
+                </article>
+            </section>
+        <!--Container 09-->
     </main>
 </body>
     <!--Js-->
