--- a/index.html
+++ b/index.html
@@ -739,6 +739,22 @@
                                                     </span>
                                                 </span>
                                               </div>
+                                              <div class="carousel-item w-75">
+                                                    <span class="w-100">
+                                                        <!--Titulo-->
+                                                            <div style="color: var(--bs-azul-intermediario);">
+                                                                    <h4>Revisando as habilidades</h4>
+                                                            </div>
+                                                        <!--Titulo-->
+                                                        <br>
+                                                        <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
+                                                                <p>Pessoas resilientes e adaptáveis frequentemente desenvolvem autoconhecimento - habilidade de reconhecer suas emoções, limites e capacidades, permitindo que identifiquem o impacto das adversidades em suas vidas. Este entendimento de si torna-se essencial para ativar outros recursos internos, como o autocontrole/autogestão emocional (regulação das reações emocionais diante de situações de pressão ou estresse), a flexibilidade (capacidade de ajustar pensamentos e comportamentos de forma criativa e eficaz frente a mudanças inesperadas) e a coragem (capacidade de agir mediante aos desafios, demonstrando iniciativa e foco em soluções).</p>
+                                                                    <br>
+                                                                <p>Além disso, estamos notando que tais comportamentos estão profundamente conectados à automotivação, que fornece energia para persistir em objetivos, mesmo diante de contratempos. Pessoas resilientes e adaptáveis podem contribuir significativamente para o desenvolvimento do grupo em que estão inseridas, compartilhando suas habilidades sociais, construindo redes de apoio e fomentando ambiente de suporte mútuo e colaboração.</p>
+                                                                    <br>
+                                                        </span>
+                                                    </span>
+                                              </div>
                                             </div>
                                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample4" data-bs-slide="prev">
                                               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
