--- a/index.html
+++ b/index.html
@@ -778,6 +778,52 @@
                 </article>
             </section>
         <!--Container 09-->
+        <!--Container 10-->
+            <section class="container-xxl">
+                <article style="background: var(--bs-verde);">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <!--Img-->
+                            <span class="w-50">
+                                <img class="w-100" src="./img/Decimaimg.webp" alt="Segunda Img">
+                            </span>
+                        <!--Img-->
+                        <!--Texto-->
+                            <div class="w-50">
+                                <div style="max-height: 400px; overflow-y: auto; display: flex; justify-content: center;">
+                                    <div class="w-75 d-flex">
+                                        <span class="w-100">
+                                            <!--Introdução-->
+                                                <span style="gap: 0.5rem;" class="d-flex align-items-end">
+                                                    <img style="width: 15% !important;" src="./img/icons/icon6.webp" alt="Icon parte01">
+                                                    <span style="height: 6vh !important; display: flex; align-items: center; width: 35% !important;">
+                                                        <h4 style="background: url(./img/icons/Setaazul.webp); background-size: cover; width: 100% !important; padding-left: 1rem !important; color: var(--bs-white); font-family: PlayfairDisplay-Regular !important; font-size: 2rem;">Parte 9</h4>
+                                                    </span>
+                                                </span>
+                                            <!--Introdução-->
+                                            <br>
+                                            <!--Titulo-->
+                                                <div style="color: var(--bs-azul-intermediario);">
+                                                    <h4>Conclusão</h4>
+                                                </div>
+                                            <!--Titulo-->
+                                            <br>
+                                            <span style="color: var(--bs-azul-escuro); font-size: 1.1rem;">
+                                                <p>Ao longo das últimas seções, exploramos a resiliência e adaptabilidade como habilidades fundamentais para enfrentar os desafios do mundo contemporâneo. Ambas foram apresentadas como competências dinâmicas, que envolvem várias características que, interconectadas, contribuem diretamente para o crescimento pessoal.</p>
+                                                    <br>
+                                                <p>A autogestão emocional, a flexibilidade, a coragem, a tolerância ao estresse, mostraram-se como habilidades e/ou práticas propositivas para tal.</p>
+                                                    <br>
+                                                <p>Portanto, resiliência e adaptabilidade não apenas promovem equilíbrio emocional e saúde mental, mas também favorecem a inovação, a resolução de problemas e o sucesso em qualquer área da vida. Ao concluir esta prática, esperamos que você reconheça a importância de cultivar e praticar a resiliência e a adaptabilidade como uma habilidade essencial para prosperar em um mundo em constante transformação</p>
+                                                    <br>
+                                            </span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        <!--Texto-->
+                    </div>
+                </article>
+            </section>
+        <!--Container 10-->
     </main>
 </body>
     <!--Js-->
