--- a/index.html
+++ b/index.html
@@ -178,12 +178,11 @@
                                                                                 Como a flexibilidade contribui para a adaptação a imprevistos no dia a dia e para a busca de soluções eficazes?
                                                                             </p>
                                                                             <textarea id="input-text" oninput="checkInput()" placeholder="Digite algo..."></textarea> 
-                                                                            <div class="btn-container" id="btn-container">
-                                                                                <button class="btn btn-primary" onclick="enviarTexto()">Enviar</button>
+                                                                            <div class="btn-container justify-content-center align-items-center" id="btn-container">
+                                                                                <button id="BtnEnvio" class="btn btn-primary" onclick="enviarTexto()">Enviar</button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
-                                                                <!--Questão01-->
                                                                 <!--Questão01-->
                                                                 <!--Questão02-->    
                                                                     <img class="w-25" src="./img/icons/questao02.png" alt="Segundo Icon">
